server/compilers/goLiteJS/src/test/ml1/valid/exp4.go
// function calls as expressions
package main

func main() {
    _ = f()
    _ = (f())
}
