server/compilers/goLiteJS/src/test/ml1/invalid/func14.go
// missing right curly brace
package main

func f() {
    return
